[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets-TG/Assets/disparo/disparo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Disparo.gd" type="Script" id=2]
[ext_resource path="res://Assets-TG/personaje_principal/Free 2D Animated Vector Game Character Sprites/Extras/bullet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 60, 28 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 60, 28 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "disparo",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.48806
height = 1.02357

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2.75, 4.5 )

[node name="Disparo" type="RigidBody2D"]
mode = 2
gravity_scale = 0.0
linear_velocity = Vector2( 1500, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.90735e-06 )
scale = Vector2( 0.0110777, 0.0096717 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 8 )
animation = "disparo"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.56358
shape = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
self_modulate = Color( 0.0431373, 0.886275, 0.176471, 1 )
position = Vector2( 5, 0 )
shape = SubResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3, 0.25 )
scale = Vector2( 0.4, 0.475 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
